# yadisk-cli

./: .gitignore  CMakeLists.txt  README.md
sources/: yad.cpp
